# looplm

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_add_last_sync_error.py  002_add_sync_progress_fields.py  003_add_thread_id_to_traces.py  004_add_child_run_support.py  005_add_prompt_reviews.py  006_add_feedback_scores.py  007_add_projects.py  008_add_advisor_analyses.py  009_add_evaluations.py  010_add_eval_jobs.py  011_add_project_settings.py  012_add_eval_job_log_progress.py  (+79 more)
apps/api/app/: auth.py  cache.py  config.py  db.py  encryption.py  main.py  project_settings.py
apps/api/scripts/: backfill_passage_offsets.py  dump_openapi.py
apps/api/tests/: conftest.py  test_advisor.py  test_agent_retrieval.py  test_analysis_llm.py  test_analysis_task_launch.py  test_analytics.py  test_analytics_helpers.py  test_auth.py  test_case_diagnosis.py  test_chunk_agreement.py  test_chunk_claim_boundary.py  test_chunk_cohesion.py  test_chunk_labeling.py  test_chunk_pool.py  test_chunk_quality.py  test_chunk_quality_boundary.py  test_chunk_quality_router.py  test_chunk_retrieval_frequency.py  test_chunk_standalone_judge.py  test_code_agent.py  test_dashboard_metrics.py  test_dataset_expected_urls.py  test_dataset_helpers.py  test_dataset_status.py  test_dataset_validation.py  test_duplicate_detection.py  test_eval_history.py  test_eval_rerun.py  test_eval_runners.py  test_eval_summaries.py  test_evaluations.py  test_failure_pattern.py  test_feedback_analysis_selection.py  test_feedback_failure_modes.py  test_feedback_suggestions_selection.py  test_feedback_themes_worker.py  test_github_app.py  test_github_app_auth.py  test_github_app_cache.py  test_github_app_clone.py  (+36 more)
connectors/: base.py  pyproject.toml
connectors/langfuse/: README.md  __init__.py  connector.py  models.py
connectors/langfuse/tests/: test_connector.py
connectors/langsmith/: __init__.py  connector.py  normalization.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/looplm/: __init__.py  client.py  tracing.py
(+531 files in other folders)
