[project]
name = "looplm-connectors"
version = "0.4.0"
description = "LoopLM connector integrations (LangSmith, Langfuse, etc.)"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["connectors", "connectors.langsmith", "connectors.langfuse"]

[tool.setuptools.package-dir]
connectors = "."
