[tool.poetry]
name = "looplm-api"
version = "0.14.0"
description = "LoopLM API - LLM debugging platform backend"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.0" }
asyncpg = ">=0.30.0"
pydantic = {version = ">=2.0.0", extras = ["email"]}
pydantic-settings = ">=2.0.0"
redis = ">=5.0.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"
openai = ">=1.61.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
bcrypt = ">=4.0.0"
cryptography = ">=42.0.0"
alembic = ">=1.13.0"
celery = ">=5.4.0"
langfuse = ">=2.0.0"
langsmith = ">=0.1.0"
azure-search-documents = ">=11.5.0"
aiohttp = ">=3.9.0"  # async HTTP transport for the azure-search aio clients
pydantic-ai-slim = {version = ">=1.0.0", extras = ["openai", "anthropic"]}
looplm-connectors = {path = "../../connectors", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
aiosqlite = ">=0.20.0"
ruff = ">=0.8.0"
mypy = ">=1.13.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
