[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "looplm"
version = "0.1.0"
description = "Python SDK for pushing LLM traces to LoopLM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx>=0.27.0"]

[tool.setuptools]
packages = ["looplm"]
